Always show scrollbars on modals to prevent content jumping around when scrollbar appears

--- a/src/global.scss
+++ b/src/global.scss
@@ -57,3 +57,7 @@ $mig-ui-breakpoint-list: build-breakpoint-map('base', 'sm', 'md', 'lg', 'xl', '2
 .storage-modal-modifier {
   min-height: 24em;
 }
+
+.always-scroll .pf-c-modal-box__body {
+  overflow-y: scroll;
+}
